--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,13 @@
 	</parent>
 	<groupId>net.ktc</groupId>
 	<artifactId>modepaiemnt</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>webpanel-paiement</name>
-	<description>Service de gestion des modepaiements</description>
+	<description>Service de gestion des moded de paiement</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 		<spring.cloud.version>2021.0.1</spring.cloud.version>
 	</properties>
@@ -30,6 +32,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
